--- a/gs-rest-service/pom.xml
+++ b/gs-rest-service/pom.xml
@@ -39,11 +39,11 @@
         	<optional>true</optional>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.github.noraui/ojdbc7 -->
-		<dependency>
+		<!-- <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc14</artifactId>
             <version>12.1.0.1</version>
-        </dependency>
+        </dependency> -->
         
     </dependencies>   
     <properties>
